# controllers/category.go
@@ -7,6 +7,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetCategoryHandler 获取分类列表
+// @Summary 获取分类列表
+// @Description 分类列表
+// @Tags category
+// @Accept application/json
+// @Produce application/json
+// @Param object body models.PageListParams true "参数"
+// @Success 200 {object} CategoryRes
+// @Router /category [post]
 func GetCategoryHandler(c *gin.Context) {
 	p := models.PageListParams{
 		PageSize:  10,
